--- a/css/style.css
+++ b/css/style.css
@@ -31,6 +31,7 @@ html {
        width: 100%;
     height: 94px;
     background-color: #84A178;
+    width: 1200px;
 }
 .hidden-visally {
     position: fixed;
